--- a/libSpace/Makefile
+++ b/libSpace/Makefile
@@ -19,7 +19,7 @@ CXX      = g++
 CXXFLAGS = -g -W -Wall -fPIC -I.
 
 LINK     = g++
-LFLAGS   = -headerpad_max_install_names -single_module -dynamiclib -compatibility_version 1.0 -current_version 1.0.0 -install_name libSpace.1.dylib
+LFLAGS  = -headerpad_max_install_names -single_module -dynamiclib -compatibility_version 1.0 -current_version 1.0.0 -install_name libSpace.1.dylib
 
 RM       = rm -f
 LN       = ln -s
@@ -38,6 +38,17 @@ TARGET0 = libSpace.dylib
 TARGET1 = libSpace.1.dylib
 TARGET2 = libSpace.1.0.dylib
 
+# Detect operating system flavor.
+UNAME   := $(shell uname)
+
+# .dylib is only for Darwin, so remove the target.
+ifneq ($(UNAME), Darwin)
+TARGET = 
+TARGET0 = 
+TARGET1 = 
+TARGET2 = 
+endif
+
 # builds
 
 $(TARGET): $(OBJECTS) $(INCLUDES)
@@ -54,7 +65,7 @@ $(TARGETA): $(OBJECTS) $(INCLUDES)
 	$(AR) $(TARGETA) $(OBJECTS)
 	$(RANLIB) $(TARGETA)
 
-all: main
+all: staticlib main
 
 main: main.o $(TARGET)
 	g++ main.o -o main -L. -lSpace
