rename python/Space[Boost, Manual] to python/[Boost, Manual]

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,5 @@ libSpace/space_unittest
 libSpace/mepsilon
 
 # builds
-python/BodyBoost/build
-python/SpaceManual/build
-python/SpaceBoost/build
+python/Boost/build
+python/Manual/build
